--- a/themes/PaperMod/assets/css/core/reset.css
+++ b/themes/PaperMod/assets/css/core/reset.css
@@ -23,6 +23,7 @@ h6 {
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	letter-spacing: 2px;
     font-size: 18px;
     line-height: 1.6;
     word-break: break-word;
